gobmkida/g1/dragon_escape
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2230:7: error: use of undeclared identifier 'mx_initialized_1'
if ( !mx_initialized_1 ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2232:26: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2232:9: error: use of undeclared identifier 'mx_0'
memset( mx_0, 0, sizeof( mx_0)); 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2233:1: error: use of undeclared identifier 'mx_initialized_1'
mx_initialized_1 = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2242:1: error: use of undeclared identifier 'mx_0'
mx_0[v5] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2279:19: error: use of undeclared identifier 'mx_0'
if ( v16 != 3 && !mx_0[v15] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2291:1: error: use of undeclared identifier 'mx_0'
mx_0[v15] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2297:19: error: use of undeclared identifier 'mx_0'
if ( v21 != 3 && !mx_0[v20] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2309:1: error: use of undeclared identifier 'mx_0'
mx_0[v20] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2315:19: error: use of undeclared identifier 'mx_0'
if ( v26 != 3 && !mx_0[v25] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2327:1: error: use of undeclared identifier 'mx_0'
mx_0[v25] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2333:19: error: use of undeclared identifier 'mx_0'
if ( v31 != 3 && !mx_0[v30] ) 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2345:1: error: use of undeclared identifier 'mx_0'
mx_0[v30] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2354:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[v14 + 19] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2366:1: error: use of undeclared identifier 'mx_0'
mx_0[v42] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2374:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[v14 - 21] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2385:1: error: use of undeclared identifier 'mx_0'
mx_0[v43] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2393:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[v14 - 19] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2404:1: error: use of undeclared identifier 'mx_0'
mx_0[v47] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2412:7: error: use of undeclared identifier 'mx_0'
if ( !mx_0[v14 + 21] ) 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2423:1: error: use of undeclared identifier 'mx_0'
mx_0[v35] = 1; 
^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2451:6: error: use of undeclared identifier 'mx_0'
if ( mx_0[*v10] != 1 ) 
     ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/engine/dragon.c:2458:1: error: use of undeclared identifier 'mx_0'
mx_0[v51] = 0; 
^
23 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/dragon_escape/src/obj/1/dragon.o] Error 1
